# gtfo-log-tracker

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  package.sh
.github/workflows/: ci.yaml  release.yaml
ci/: build.sh  latest-changes.sh
data/: logs.json
src/: game_data.rs  gui.rs  lib.rs  main.rs  play_fab.rs  steam.rs
src/iced_gui/: game_log_watcher.rs  mod.rs
tools/: generate-logs.sh  parse-dimension.jq  parse-level-layout.jq
