[package]
name = "gtfo-log-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[dependencies]
regex = "1.10.2"
steamworks = "0.10.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
time = { version = "0.3.31", features = ["macros"] }
once_cell = "1.19.0"
anyhow = "1.0.76"
iced = { version = "0.10.0", features = ["lazy", "tokio"] }
iced_aw = { version = "0.7.0", default-features = false, features = ["spinner"] }
iced_table = "0.1.0"