[package]
name = "gtfo-log-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1

[dependencies]
anyhow = "1.0.76"
dirs = "5.0.1"
futures = "0.3.29"
iced = { version = "0.10.0", features = ["lazy", "tokio"] }
iced_aw = { version = "0.7.0", default-features = false, features = ["spinner"] }
iced_table = "0.1.0"
log = "0.4.20"
notify = "6.1.1"
once_cell = "1.19.0"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
simplelog = "0.12.1"
steamworks = "0.10.0"
time = { version = "0.3.31", features = ["macros"] }
tokio = { version = "1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32_UI_Shell", "Win32_Foundation"] }